--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -626,7 +626,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_element={\n",
+    "    featureElm={\n",
     "        \"FELEM_CODE\": \"GIVEN_NAME\"\n",
     "    }\n",
     "    featureElm_json = json.dumps(featureElm)\n",
@@ -659,7 +659,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_element = {\n",
+    "    featureElm = {\n",
     "        \"FELEM_CODE\": \"myNewFelem\",\n",
     "        \"FELEM_ID\": 789,\n",
     "        \"TOKENIZE\": 1,\n",
@@ -683,7 +683,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- **feature_element_json:** (str) feature element code for the feature element to be deleted"
+    "- **featureElm_json:** (str) feature element code for the feature element to be deleted"
    ]
   },
   {
@@ -693,7 +693,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    feature_element = {\n",
+    "    featureElm = {\n",
     "        \"FELEM_CODE\": \"myNewFelem\"\n",
     "    }\n",
     "    featureElm_json = json.dumps(featureElm)\n",
@@ -873,7 +873,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**element_json:** (str) json containing the data of the element and the feature to add it to"
+    "- ?**elmnt_json:** (str) json containing the data of the element and the feature to add it to"
    ]
   },
   {
@@ -904,7 +904,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**element_json:** (str) json containing the name of the element and the feature to remove it from"
+    "- ?**elmnt_json:** (str) json containing the name of the element and the feature to remove it from"
    ]
   },
   {
@@ -999,7 +999,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_standard_json:** (str) the id of the feature standardization function to retrieve\n",
+    "- ?**featureStandard_json:** (str) the id of the feature standardization function to retrieve\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1011,7 +1011,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_standard = {\n",
+    "    featureStandard = {\n",
     "        \"SFCALL_ID\": 4\n",
     "    }\n",
     "    featureStandard_json = json.dumps(featureStandard)\n",
@@ -1032,7 +1032,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_standard_json:** (str) json containing the data of the feature standardization function to add\n",
+    "- ?**featureStandard_json:** (str) json containing the data of the feature standardization function to add\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1044,7 +1044,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_standard = {\n",
+    "    featureStandard = {\n",
     "        \"FTYPE_CODE\": \"veh_vin\",\n",
     "        \"SFCALL_ID\": 789,\n",
     "        \"SFUNC_CODE\": \"PARSE_ID\",\n",
@@ -1068,7 +1068,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_standard_json:** (str) the id of the feature standardization function to delete"
+    "- ?**featureStandard_json:** (str) the id of the feature standardization function to delete"
    ]
   },
   {
@@ -1079,7 +1079,7 @@
    "source": [
     "# Get the json from the previous function\n",
     "try:\n",
-    "    feature_standard = {\n",
+    "    featureStandard = {\n",
     "        \"SFCALL_ID\": 789\n",
     "    }\n",
     "    featureStandard_json = json.dumps(featureStandard)\n",
@@ -1162,7 +1162,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_expression_json:** (str) the id of the feature expression function to retrieve\n",
+    "- ?**featureExpress_json:** (str) the id of the feature expression function to retrieve\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1174,7 +1174,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_expression = {\n",
+    "    featureExpress = {\n",
     "        \"EFCALL_ID\": 1\n",
     "    }\n",
     "    featureExpress_json = json.dumps(featureExpress)\n",
@@ -1195,7 +1195,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_expression_json:** (str) the data of the feature expression function to add\n",
+    "- ?**featureExpress_json:** (str) the data of the feature expression function to add\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1207,7 +1207,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_expression = {\n",
+    "    featureExpress = {\n",
     "        \"FTYPE_CODE\": \"veh_vin\",\n",
     "        \"EFCALL_ID\": 789,\n",
     "        \"EFUNC_CODE\": \"EXPRESS_ID\",\n",
@@ -1236,7 +1236,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_expression_element_json:** (str) ???"
+    "- ?**featureExpressElm_json:** (str) ???"
    ]
   },
   {
@@ -1268,7 +1268,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_expression_element_json** (str) ???"
+    "- ?**featureExpressElm_json** (str) ???"
    ]
   },
   {
@@ -1299,7 +1299,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_expression_json** (str) the id of the feature expression function to delete"
+    "- ?**featureExpress_json** (str) the id of the feature expression function to delete"
    ]
   },
   {
@@ -1310,7 +1310,7 @@
    "source": [
     "# Get the json from the previous function\n",
     "try:\n",
-    "    feature_expression = {\n",
+    "    featureExpress = {\n",
     "        \"EFCALL_ID\": 789\n",
     "    }\n",
     "    featureExpress_json = json.dumps(featureExpress)\n",
@@ -1395,7 +1395,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_comparison_function_json:** (str) the id of the feature comparison function to retrieve\n",
+    "- ?**featureCompFunc_json:** (str) the id of the feature comparison function to retrieve\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1407,7 +1407,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_comparison_function = {\n",
+    "    featureCompFunc = {\n",
     "        \"CFCALL_ID\": 2\n",
     "    }\n",
     "    featureCompFunc_json = json.dumps(featureCompFunc)\n",
@@ -1428,7 +1428,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_comparison_function_json:** (str) json containing the data for the feature comparison function to add\n",
+    "- ?**featureCompFunc_json:** (str) json containing the data for the feature comparison function to add\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1440,7 +1440,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_comparison_function = {\n",
+    "    featureCompFunc = {\n",
     "        \"FTYPE_CODE\": \"name_key\",\n",
     "        \"CFCALL_ID\": 789,\n",
     "        \"CFUNC_CODE\": \"ID_COMP\",\n",
@@ -1467,7 +1467,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_comparison_function_json:** the id of the feature comparison function to delete"
+    "- ?**featureComp_json:** the id of the feature comparison function to delete"
    ]
   },
   {
@@ -1478,7 +1478,7 @@
    "source": [
     "# Get input_json from previous function\n",
     "try:\n",
-    "    feature_comparison_function = {\n",
+    "    featureComp = {\n",
     "        \"CFCALL_ID\": 789\n",
     "    }\n",
     "    featureComp_json = json.dumps(featureComp)\n",
@@ -1497,7 +1497,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_comparison_element_json:** (str) ???"
+    "- ?**featureCompElm_json:** (str) ???"
    ]
   },
   {
@@ -1525,7 +1525,7 @@
     "#### deleteFeatureComparsionFunctionCallElementV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_comparison_element_json:** (str) ???"
+    "- ?**featureCompElm_json:** (str) ???"
    ]
   },
   {
@@ -1615,7 +1615,7 @@
    "source": [
     "#### getFeatureDistinctFunctionCallV2\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_distinct_function_json:** (str) the id of the feature distinct function to retrieve\n",
+    "- ?**featureFunc_json:** (str) the id of the feature distinct function to retrieve\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1646,7 +1646,7 @@
     "#### addFeatureDistinctFunctionCallV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_distinct_function_json:** (str) json containing the data of the feature distinct function to add\n",
+    "- ?**featureFunc_json:** (str) json containing the data of the feature distinct function to add\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1658,7 +1658,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    feature_distinct_function = {\n",
+    "    featureFunc = {\n",
     "        \"FTYPE_CODE\": \"name_key\",\n",
     "        \"DFCALL_ID\": 789,\n",
     "        \"DFUNC_CODE\": \"FELEM_STRICT_SUBSET\",\n",
@@ -1683,7 +1683,7 @@
     "#### deleteFeatureDistinctFunctionCallV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_distinct_function_json:** (str) the id of the feature distinct function to delete"
+    "- ?**featureFunc_json:** (str) the id of the feature distinct function to delete"
    ]
   },
   {
@@ -1710,7 +1710,7 @@
     "#### addFeatureDistinctFunctionCallElementV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_distinct_element_json:** (str) ???"
+    "- ?**featureElmt_json:** (str) ???"
    ]
   },
   {
@@ -1738,7 +1738,7 @@
     "#### deleteFeatureDistinctFunctionCallElementV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_element_json:** (str) ???"
+    "- ?**featureElmt_json:** (str) ???"
    ]
   },
   {
@@ -1829,7 +1829,7 @@
     "### getAttributeV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**attribute:** (str) the name of the attribute to retrieve\n",
+    "- ?**data_json:** (str) the name of the attribute to retrieve\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1841,7 +1841,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    attribute = {\n",
+    "    data = {\n",
     "        \"ATTR_CODE\": \"DATA_SOURCE\"\n",
     "    }\n",
     "    data_json = json.dumps(data)\n",
@@ -1860,7 +1860,7 @@
     "### addAttributeV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**attribute_json:** (str) json of the data fo the attribute to add\n",
+    "- ?**attr_json:** (str) json of the data fo the attribute to add\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -1872,7 +1872,7 @@
    "source": [
     "try:\n",
     "    response_bytearray = bytearray()\n",
-    "    attribute = {\n",
+    "    attr = {\n",
     "        \"ATTR_CODE\": \"myNewAttr\",\n",
     "        \"ATTR_ID\": 789,\n",
     "        \"ATTR_CLASS\": \"attribute\",\n",
@@ -1899,7 +1899,7 @@
     "### deleteAttributeV2\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**attribute_json:** (str) the name of the attribute to delete"
+    "- ?**data_json:** (str) the name of the attribute to delete"
    ]
   },
   {
@@ -1909,7 +1909,7 @@
    "outputs": [],
    "source": [
     "try:\n",
-    "    attribute = {\n",
+    "    data = {\n",
     "        \"ATTR_CODE\": \"NAME_FIRST\"\n",
     "    }\n",
     "    data_json = json.dumps(data)\n",
@@ -2007,7 +2007,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2021,7 +2021,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
