--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -431,7 +431,7 @@
     "    last_modified_datetime = datetime.fromtimestamp(last_modified_unixtime)\n",
     "\n",
     "    print(\"Last modified timestamp: {0}\\nLast modified time: {1}\"\n",
-    "          .format(last_modified_timestamp.decode(), last_modified_datetime))\n",
+    "          .format(last_modified_time_bytearray.decode(), last_modified_datetime))\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_engine.getLastException())"
@@ -2984,7 +2984,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2998,7 +2998,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
