--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -380,6 +380,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### deleteDataSourceV2\n",
+    "\n",
+    "Call G2Config's `deleteDataSourceV2()` method and pretty-prints results.\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- ?**config_handle:** (int) variable containg the the number of the used config\n",
+    "- ?**datasource_json:** (str) json containing the name of the datasource to be added"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    datasource = {\n",
+    "        \"DSRC_CODE\": \"CUSTOMER\"\n",
+    "    }\n",
+    "    datasource_json = json.dumps(datasource)\n",
+    "    response_bytearray = bytearray()\n",
+    "\n",
+    "    g2_config.deleteDataSourceV2(config_handle, datasource_json)\n",
+    "\n",
+    "except G2Exception.G2ModuleGenericException as err:\n",
+    "    print(g2_config.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Entities"
    ]
   },
@@ -436,36 +469,6 @@
     "    response_bytearray = bytearray()\n",
     "\n",
     "    g2_config.listEntityTypesV2(config_handle, response_bytearray)\n",
-    "\n",
-    "except G2Exception.G2ModuleGenericException as err:\n",
-    "    print(g2_config.getLastException())\n",
-    "    \n",
-    "RenderJSON(response_bytearray)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### listEntityClasses again\n",
-    "\n",
-    "###### Parameters\n",
-    "\n",
-    "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "try:\n",
-    "    response_bytearray = bytearray()\n",
-    "\n",
-    "    g2_config.listEntityClassesV2(config_handle, response_bytearray)\n",
-    "\n",
     "\n",
     "except G2Exception.G2ModuleGenericException as err:\n",
     "    print(g2_config.getLastException())\n",
@@ -614,7 +617,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_element_json:** (str) the name of the feature element to be retrieved\n",
+    "- ?**featureElm_json:** (str) the name of the feature element to be retrieved\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
@@ -647,7 +650,7 @@
     "###### Parameters\n",
     "\n",
     "- ?**config_handle:** (int) variable containg the the number of the used config\n",
-    "- ?**feature_element_json:** (str) json containing the data for the feature element to add\n",
+    "- ?**featureElm_json:** (str) json containing the data for the feature element to add\n",
     "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
    ]
   },
