--- a/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -42,9 +42,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "heading_collapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Helper class for Json Rendering"
    ]
@@ -52,9 +50,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "%%loadFromPOM\n",
@@ -68,9 +64,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import javax.json.*;\n",
@@ -81,9 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "public class JsonUtil {\n",
@@ -127,9 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import java.util.UUID;\n",
@@ -492,7 +482,7 @@
    "mimetype": "text/x-java-source",
    "name": "Java",
    "pygments_lexer": "java",
-   "version": "11.0.11+9-Ubuntu-0ubuntu2.18.04"
+   "version": "11.0.8+10-post-Ubuntu-0ubuntu118.04.1"
   },
   "toc": {
    "base_numbering": 1,
