--- a/notebooks/python/senzing-init-config.ipynb
+++ b/notebooks/python/senzing-init-config.ipynb
@@ -124,11 +124,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import G2Exception\n",
-    "from G2ConfigMgr import G2ConfigMgr\n",
+    "from senzing import G2ConfigMgr, G2Exception\n",
     "g2_configuration_manager = G2ConfigMgr()\n",
     "try:\n",
-    "    g2_configuration_manager.initV2(\n",
+    "    g2_configuration_manager.init(\n",
     "        module_name,\n",
     "        senzing_config_json,\n",
     "        verbose_logging)\n",
@@ -219,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.8"
   },
   "toc": {
    "base_numbering": 1,
