--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -245,9 +245,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### listDataSourcesV2\n",
+    "### listDataSources\n",
     "\n",
-    "Call G2Config's `listDataSourcesV2()` method and pretty-printsresults.\n",
+    "Call G2Config's `listDataSources()` method and pretty-printsresults.\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -276,9 +276,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### addDataSourceV2\n",
+    "### addDataSource\n",
     "\n",
-    "Call G2Config's `addDataSourceV2()` method and pretty-prints results.\n",
+    "Call G2Config's `addDataSource()` method and pretty-prints results.\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -316,7 +316,7 @@
    "source": [
     "### listDataSources again\n",
     "\n",
-    "Call G2Config's `listDataSourcesV2()` method and pretty-prints results.\n",
+    "Call G2Config's `listDataSources()` method and pretty-prints results.\n",
     "Notice that the list now contains the newly added datasource_code of \"CUSTOMER\".\n",
     "\n",
     "###### Parameters\n",
@@ -345,9 +345,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### deleteDataSourceV2\n",
+    "### deleteDataSource\n",
     "\n",
-    "Call G2Config's `deleteDataSourceV2()` method and pretty-prints results.\n",
+    "Call G2Config's `deleteDataSource()` method and pretty-prints results.\n",
     "\n",
     "###### Parameters\n",
     "\n",
