--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -193,7 +193,7 @@
     "This should be done once per process.\n",
     "\n",
     "Create a new instance of the config manager and assign it to a variable.\n",
-    "Then, call the appropriate initialization method (such as initV2) to initialize the config manager.\n",
+    "Then, call the appropriate initialization method to initialize the config manager.\n",
     "\n",
     "###### Parameters\n",
     "\n",
