--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -216,9 +216,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### initWithConfigIDV2\n",
+    "### initWithConfigID\n",
     "\n",
-    "Alternatively `initWithConfigIDV2()` can be used to specify a configuration.\n",
+    "Alternatively `initWithConfigID()` can be used to specify a configuration.\n",
     "\n",
     "###### Parameters\n",
     "\n",
@@ -250,9 +250,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### reinitV2\n",
+    "### reinit\n",
     "\n",
-    "The `reinitV2()` function may be used to reinitialize the engine\n",
+    "The `reinit()` function may be used to reinitialize the engine\n",
     "using a specified initConfigID.\n",
     "\n",
     "###### Parameters\n",
@@ -696,12 +696,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getRecordV2\n",
+    "#### getRecord\n",
     "\n",
-    "Use `getRecordV2()` to retrieve a single record from the data repository;\n",
+    "Use `getRecord()` to retrieve a single record from the data repository;\n",
     "the record is assigned in JSON form to a user-designated buffer.\n",
     "Once the Senzing engine is initialized,\n",
-    "`getRecordV2()` can be called as many times as desired and from multiple\n",
+    "`getRecord()` can be called as many times as desired and from multiple\n",
     "threads at the same time.\n",
     "\n",
     "###### Parameters\n",
@@ -745,7 +745,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getEntityByRecordIDV2\n",
+    "#### getEntityByRecordID\n",
     "\n",
     "Entity searching is a key component for interactive use of Entity Resolution\n",
     "intelligence.\n",
@@ -755,7 +755,7 @@
     "as many times as desired and from multiple threads at the same time\n",
     "(and all of which return \"0\" upon success).\n",
     "\n",
-    "Use `getEntityByRecordIDV2()` to retrieve entity data based on the ID of a\n",
+    "Use `getEntityByRecordID()` to retrieve entity data based on the ID of a\n",
     "resolved identity.\n",
     "\n",
     "###### Parameters\n",
@@ -793,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### getEntityByEntityIDV2\n",
+    "#### getEntityByEntityID\n",
     "\n",
     "Entity searching is a key component for interactive use of Entity Resolution\n",
     "intelligence.\n",
@@ -804,7 +804,7 @@
     "as desired and from multiple threads at the same time (and all of which\n",
     "return \"0\" upon success).\n",
     "\n",
-    "Use `getEntityByEntityIDV2()` to retrieve entity data based on the ID of a\n",
+    "Use `getEntityByEntityID()` to retrieve entity data based on the ID of a\n",
     "resolved identity.\n",
     "\n",
     "###### Parameters\n",
@@ -886,13 +886,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### searchByAttributesV2\n",
+    "#### searchByAttributes\n",
     "\n",
     "This function is similar but preferable to the searchByAttributes() function.\n",
     "This function has improved functionality and a better standardized output\n",
     "structure.\n",
     "\n",
-    "Use `searchByAttributesV2()` to retrieve entity data based on\n",
+    "Use `searchByAttributes()` to retrieve entity data based on\n",
     "a user-specified set of entity attributes.\n",
     "\n",
     "###### Parameters\n",
@@ -1103,13 +1103,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### findPathByEntityIDV2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "#### findPathByEntityID\n",
+    "\n",
     "The `findPathByEntityID()` function can be used to find single relationship paths between two entities. Paths are found using known relationships with other entities.\n",
     "\n",
     "###### Parameters\n",
@@ -1159,9 +1154,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### findPathByRecordIDV2\n",
+    "#### findPathByRecordID\n",
     "\n",
-    "The `findPathByRecordIDV2()` function\n",
+    "The `findPathByRecordID()` function\n",
     "can be used to find single relationship paths between two entities.\n",
     "Paths are found using known relationships with other entities.\n",
     "\n",
@@ -1533,9 +1528,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### findNetworkByEntityIDV2\n",
+    "#### findNetworkByEntityID\n",
     "\n",
-    "The `findNetworkByEntityIDV2()` function\n",
+    "The `findNetworkByEntityID()` function\n",
     "can be used to find all entities surrounding a requested set of entities.\n",
     "This includes the requested entities, paths between them, and relations to\n",
     "other nearby entities.\n",
@@ -1721,13 +1716,7 @@
     "Senzing recommends using the flags `G2_ENTITY_OPTION_INCLUDE_INTERNAL_FEATURES`\n",
     "and `G2_ENTITY_OPTION_INCLUDE_FEATURE_STATS`.\n",
     "This will provide detailed feature data that is not included by default,\n",
-    "but is useful for understanding the WHY_RESULTS data.)\n",
-    "\n",
-    "The functions `whyEntitiesV2()`, `whyRecordsV2()`, `whyEntityByRecordIDV2()`, and `whyEntityByEntityIDV2()` are\n",
-    "enhanced versions of `whyEntities()`, `whyRecords()`, `whyEntityByRecordID()`, and `whyEntityByEntityID()`\n",
-    "that also allow you to use control flags.\n",
-    "The `whyEntities()`, `whyRecords()`, `whyEntityByRecordID()`, and `whyEntityByEntityID()` functions work in the\n",
-    "same way, but use the default flag value `G2_WHY_ENTITY_DEFAULT_FLAGS`."
+    "but is useful for understanding the WHY_RESULTS data.)"
    ]
   },
   {
@@ -1814,9 +1803,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### whyEntityByEntityIDV2\n",
+    "### whyEntityByEntityID\n",
     "\n",
-    "The `whyEntityByEntityIDV2()` function can be used\n",
+    "The `whyEntityByEntityID()` function can be used\n",
     "to determine why records belong to their resolved entities.\n",
     "These functions will compare the record data within an entity against the\n",
     "rest of the entity data, and show why they are connected.\n",
@@ -2259,11 +2248,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### exportCSVEntityReportV2\n",
+    "### exportCSVEntityReport\n",
     "\n",
     "There are three steps to exporting resolved entity data from the G2Engine\n",
     "object in CSV format.\n",
-    "First, use the `exportCSVEntityReportV2()` method to generate a long integer,\n",
+    "First, use the `exportCSVEntityReport()` method to generate a long integer,\n",
     "referred to here as an 'export_handle'.\n",
     "\n",
     "###### Parameters\n",
