--- a/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Config-sdk-api-specification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,9 +133,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"aee472a2-c22a-43f4-a5bd-5d6576605141\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>"
+      ],
+      "text/plain": [
+       "<div id=\"aee472a2-c22a-43f4-a5bd-5d6576605141\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {document.getElementById('aee472a2-c22a-43f4-a5bd-5d6576605141').appendChild(renderjson({\"PIPELINE\":{\"CONFIGPATH\":\"/etc/opt/senzing\",\"SUPPORTPATH\":\"/opt/senzing/data\",\"RESOURCEPATH\":\"/opt/senzing/g2/resources\"},\"SQL\":{\"CONNECTION\":\"postgresql://postgres:postgres@senzing-postgres:5432:G2/\"}}))});"
+      ],
+      "text/plain": [
+       "require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {document.getElementById('aee472a2-c22a-43f4-a5bd-5d6576605141').appendChild(renderjson({\"PIPELINE\":{\"CONFIGPATH\":\"/etc/opt/senzing\",\"SUPPORTPATH\":\"/opt/senzing/data\",\"RESOURCEPATH\":\"/opt/senzing/g2/resources\"},\"SQL\":{\"CONNECTION\":\"postgresql://postgres:postgres@senzing-postgres:5432:G2/\"}}))});"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "// Get variables used in constructing Senzing Engine configuration.\n",
     "\n",
@@ -204,15 +229,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0"
+     ]
+    }
+   ],
    "source": [
     "String moduleName = \"ExampleG2Config\";\n",
     "boolean verboseLogging = true;\n",
     "\n",
     "G2Config g2config = new G2ConfigJNI();\n",
-    "int return_code = g2config.initV2(moduleName, senzingConfigJson, verboseLogging);\n",
+    "int return_code = g2config.init(moduleName, senzingConfigJson, verboseLogging);\n",
     "\n",
     "if(return_code!=0)\n",
     "    System.out.print(g2config.getLastException());\n",
@@ -229,9 +262,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mlong config_handle = \u001b[0m\u001b[1m\u001b[30m\u001b[41mg2config.create\u001b[0m\u001b[1m\u001b[30m();\u001b[0m",
+      "\u001b[1m\u001b[31mmethod create in interface com.senzing.g2.engine.G2Config cannot be applied to given types;\u001b[0m",
+      "\u001b[1m\u001b[31m  required: com.senzing.g2.engine.Result<java.lang.Long>\u001b[0m",
+      "\u001b[1m\u001b[31m  found: no arguments\u001b[0m",
+      "\u001b[1m\u001b[31m  reason: actual and formal argument lists differ in length\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "long config_handle = g2config.create()"
    ]
