#19 updated python docs

--- a/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/java/senzing-G2Engine-sdk-api-specification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -133,11 +133,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div id=\"c5365147-5119-4bda-b9d8-ab21acbaaec9\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>"
+      ],
+      "text/plain": [
+       "<div id=\"c5365147-5119-4bda-b9d8-ab21acbaaec9\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {document.getElementById('c5365147-5119-4bda-b9d8-ab21acbaaec9').appendChild(renderjson({\"PIPELINE\":{\"CONFIGPATH\":\"/etc/opt/senzing\",\"SUPPORTPATH\":\"/opt/senzing/data\",\"RESOURCEPATH\":\"/opt/senzing/g2/resources\"},\"SQL\":{\"CONNECTION\":\"postgresql://postgres:postgres@senzing-postgres:5432:G2/\"}}))});"
+      ],
+      "text/plain": [
+       "require([\"https://rawgit.com/caldwell/renderjson/master/renderjson.js\"], function() {document.getElementById('c5365147-5119-4bda-b9d8-ab21acbaaec9').appendChild(renderjson({\"PIPELINE\":{\"CONFIGPATH\":\"/etc/opt/senzing\",\"SUPPORTPATH\":\"/opt/senzing/data\",\"RESOURCEPATH\":\"/opt/senzing/g2/resources\"},\"SQL\":{\"CONNECTION\":\"postgresql://postgres:postgres@senzing-postgres:5432:G2/\"}}))});"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "// Get variables used in constructing Senzing Engine configuration.\n",
     "\n",
@@ -198,9 +223,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "CompilationException",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1m\u001b[30m|   \u001b[1m\u001b[30mint return_code = \u001b[0m\u001b[1m\u001b[30m\u001b[41mg2engine.initV2\u001b[0m\u001b[1m\u001b[30m(moduleName, senzingConfigJson, verboseLogging);\u001b[0m",
+      "\u001b[1m\u001b[31mcannot find symbol\u001b[0m",
+      "\u001b[1m\u001b[31m  symbol:   method initV2(java.lang.String,java.lang.String,boolean)\u001b[0m",
+      ""
+     ]
+    }
+   ],
    "source": [
     "G2Engine g2engine = new G2JNI();\n",
     "\n",
