--- a/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Config-sdk-api-specification.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,26 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Stored 'senzing_config_json' (str)\n",
-      "Default config already set\n",
-      "Stored 'config_id_bytearray' (bytearray)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%run senzing-init-config.ipynb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,32 +95,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"3fc2f315-46df-4205-ba5b-6ca5529d3757\" style=\"height:100%; width:100%; background-color: LightCyan\"></div>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "\n",
-       "        require([\"https://rawgit.com/caldwell/print/master/print.js\"], function() {\n",
-       "        document.getElementById('3fc2f315-46df-4205-ba5b-6ca5529d3757').appendChild(print({\"PIPELINE\": {\"CONFIGPATH\": \"/etc/opt/senzing\", \"SUPPORTPATH\": \"/opt/senzing/data\", \"RESOURCEPATH\": \"/opt/senzing/g2/resources\"}, \"SQL\": {\"CONNECTION\": \"postgresql://postgres:postgres@senzing-postgres:5432:G2/\"}}))\n",
-       "        });\n",
-       "        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "RenderJSON(senzing_config_json)"
    ]
@@ -495,7 +462,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
