--- a/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2Engine-sdk-api-specification.ipynb
@@ -686,6 +686,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### addRecordWithInfoWithReturnedRecordID\n",
+    "\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **datasource_code:** (str) The name of the data source the record is associated\n",
+    "  with.  This value is configurable to the system.\n",
+    "- **record_response:** (bytearray) The record ID of the added record.\n",
+    "- **data_as_json:** (str) A JSON document with the attribute data for the record\n",
+    "- **response_bytearray:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*\n",
+    "- **load_id:** (str **[optional]** ) the observation load ID for the record;\n",
+    "  value can be null.\n",
+    "- **g2_engine_flags:** (int **[optional]** ) Control flags for specifying what data about the\n",
+    "  entity to retrieve\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_bytearray = bytearray()\n",
+    "record_response = bytearray()\n",
+    "try:\n",
+    "    g2_engine.addRecordWithInfoWithReturnedRecordID(\n",
+    "        datasource_code,\n",
+    "        data_as_json,\n",
+    "        record_response,\n",
+    "        response_bytearray,\n",
+    "        load_id)\n",
+    "\n",
+    "except G2Exception as err:\n",
+    "    print(g2_engine.getLastException())\n",
+    "print(record_response.decode())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Replace"
    ]
   },
@@ -1396,6 +1437,34 @@
     "\n",
     "    except G2Exception as err:\n",
     "        print(g2_engine.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### processWithResponse\n",
+    "\n",
+    "###### Parameters\n",
+    "\n",
+    "- **response_bytearray:** (bytearray) the input record to add\n",
+    "- **response:** (bytearray) Object to store the output of the method. Can be used to print or store for later. **Warning:** This is not a *string*"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if (response_bytearray):\n",
+    "    response = bytearray()\n",
+    "    try:\n",
+    "        g2_engine.processWithResponse(response_bytearray.decode(), response)\n",
+    "\n",
+    "    except G2Exception as err:\n",
+    "        print(g2_engine.getLastException())\n",
+    "RenderJSON(response)"
    ]
   },
   {
@@ -2586,6 +2655,57 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### findInterestingEntitiesByEntityID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_bytearray = bytearray()\n",
+    "\n",
+    "try:\n",
+    "    g2_engine.findInterestingEntitiesByEntityID(\n",
+    "        entity_id_3,\n",
+    "        response_bytearray)\n",
+    "\n",
+    "except G2Exception as err:\n",
+    "    print(g2_engine.getLastException())\n",
+    "RenderJSON(response_bytearray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### findInterestingEntitiesByRecordID"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "response_bytearray = bytearray()\n",
+    "\n",
+    "try:\n",
+    "    g2_engine.findInterestingEntitiesByRecordID(\n",
+    "        datasource_code_1,\n",
+    "        record_id_1,\n",
+    "        response_bytearray)\n",
+    "\n",
+    "except G2Exception as err:\n",
+    "    print(g2_engine.getLastException())\n",
+    "RenderJSON(response_bytearray)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "The `whyEntities()`, `whyRecords()`, `whyEntityByRecordID()`,`whyEntityByEntityID()`, and `howEntityByEntityID()` functions can be used\n",
     "to determine why and how records belong to their resolved entities.\n",
     "These functions will compare the record data within an entity against the\n",
@@ -2861,7 +2981,7 @@
     "\n",
     "except G2Exception as err:\n",
     "    print(g2_engine.getLastException())\n",
-    "print(response_bytearray.decode())"
+    "RenderJSON(response_bytearray.decode())"
    ]
   },
   {
@@ -3076,7 +3196,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3090,7 +3210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
