--- a/notebooks/python/senzing-init-config.ipynb
+++ b/notebooks/python/senzing-init-config.ipynb
@@ -132,7 +132,7 @@
     "        senzing_config_json,\n",
     "        verbose_logging)\n",
     "\n",
-    "except G2Exception.G2ModuleGenericException as err:\n",
+    "except G2Exception as err:\n",
     "    print(g2_configuration_manager.getLastException())"
    ]
   },
@@ -178,7 +178,7 @@
     "            g2_config.save(config_handle, response_bytearray)\n",
     "            senzing_model_config_str = response_bytearray.decode()\n",
     "\n",
-    "        except G2Exception.G2ModuleGenericException as err:\n",
+    "        except G2Exception as err:\n",
     "            print(g2_config.getLastException())\n",
     "\n",
     "        # Externalize Senzing configuration to the database.\n",
@@ -194,17 +194,17 @@
     "            # Set new configuration as the default.\n",
     "\n",
     "            g2_configuration_manager.setDefaultConfigID(config_id_bytearray)\n",
-    "        except G2Exception.G2ModuleGenericException as err:\n",
+    "        except G2Exception as err:\n",
     "            print(g2_configuration_manager.getLastException())\n",
     "\n",
-    "except G2Exception.G2ModuleGenericException as err:\n",
+    "except G2Exception as err:\n",
     "    print(g2_configuration_manager.getLastException())"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -218,7 +218,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.10.4"
   },
   "toc": {
    "base_numbering": 1,
