--- a/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
+++ b/notebooks/python/senzing-G2ConfigMgr-sdk-api-specification.ipynb
@@ -119,7 +119,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(senzing_config_json)"
+    "RenderJSON(senzing_config_json)"
    ]
   },
   {
@@ -158,7 +158,7 @@
     "except G2Exception as err:\n",
     "    print(g2_config.getLastException())\n",
     "\n",
-    "print(response_bytearray.decode())"
+    "RenderJSON(response_bytearray)"
    ]
   },
   {
@@ -371,14 +371,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Cleanup"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### getLastException"
+    "### replaceDefaultConfigID"
    ]
   },
   {
@@ -387,27 +380,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(g2_config.getLastException())"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### clearLastException"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "new_config_id_bytearray = 17332833\n",
     "try:\n",
-    "    g2_config.clearLastException()\n",
+    "    g2_configuration_manager.replaceDefaultConfigID(\n",
+    "            config_id_bytearray,\n",
+    "            new_config_id_bytearray)\n",
     "\n",
     "except G2Exception as err:\n",
-    "    print(g2_config.getLastException())"
+    "    print(g2_configuration_manager.getLastException())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Cleanup"
    ]
   },
   {
@@ -455,7 +442,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -469,7 +456,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.8"
+   "version": "3.9.12"
   },
   "toc": {
    "base_numbering": 1,
